[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/MENU Icons/Play.png" type="Texture" id=1]
[ext_resource path="res://Assets/MENU Icons/StarBackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/MENU Icons/Quit.png" type="Texture" id=3]
[ext_resource path="res://Assets/MENU Icons/Menu.png" type="Texture" id=4]
[ext_resource path="res://Assets/MENU Icons/Gameover.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/PressStart2P.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/MenuScenes/MenuControlGameOver.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 480, 270 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 2 )

[node name="SpaceStrife" type="Sprite" parent="."]
position = Vector2( 480, 200 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="MenuControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="MenuControl"]
margin_left = 420.0
margin_top = 320.0
margin_right = 462.0
margin_bottom = 340.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="MenuControl"]
margin_left = 414.0
margin_top = 390.0
margin_right = 460.0
margin_bottom = 410.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MenuControl"]
margin_left = 420.0
margin_top = 460.0
margin_right = 462.0
margin_bottom = 480.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="MenuControl"]
margin_left = 5.0
margin_top = 360.0
margin_right = 417.0
margin_bottom = 395.0
custom_fonts/font = SubResource( 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="MenuControl"]
margin_left = 5.0
margin_top = 390.0
margin_right = 412.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 1 )
text = "Time Alive:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wave" type="Label" parent="MenuControl"]
margin_left = 5.0
margin_top = 330.0
margin_right = 412.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 1 )
text = "Wave:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MenuControl/Play" to="MenuControl" method="_on_Play_pressed"]
[connection signal="pressed" from="MenuControl/Menu" to="MenuControl" method="_on_Menu_pressed"]
[connection signal="pressed" from="MenuControl/Quit" to="MenuControl" method="_on_Quit_pressed"]
